// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DataSourcesEditForm /> should display an error with an empty source name 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-1 {
  margin-top: 0;
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-2 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-3 {
  width: 470px;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid #c92300;
  border-width: 2px;
}

.emotion-7:focus,
.emotion-7 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-7:hover,
.emotion-7 .noop {
  border: 2px solid #ffffff;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-9 {
  color: #c92300;
  font-style: italic;
  white-space: pre-line;
}

.emotion-11 {
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-12 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-13 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-16:hover div,
.emotion-16:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-16:hover button,
.emotion-16:focus-within button {
  color: #ffffff;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-18 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-18:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-19:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-20 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-21 {
  font-size: 15px;
  line-height: 19px;
  padding-bottom: 8px;
}

.emotion-22 {
  padding-bottom: 8px;
}

.emotion-25 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-26 {
  clear: both;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-bottom: 16px;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-29 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-30 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-31 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
  fill: #ffffff;
}

.emotion-32 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
}

.emotion-34 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-43 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-46 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #3A5DFF;
  border: 2px solid #3A5DFF;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-48 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 1;
  fill: #ffffff;
}

.emotion-52 {
  height: 8px;
}

.emotion-54 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-55 {
  padding-top: 16px;
}

.emotion-56 {
  border-radius: 2px;
  background-color: #3b3b3b;
}

.emotion-56:hover summary svg {
  opacity: 1;
}

.emotion-57 {
  list-style-type: none;
  padding: 16px;
  background-color: #3b3b3b;
}

.emotion-57::-webkit-details-marker {
  display: none;
}

.emotion-57:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-59 {
  color: #808080;
}

.emotion-60 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 16px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-61 {
  border-top: 1px solid #4a4a4a;
  padding: 32px;
  padding-top: 16px;
}

.emotion-62 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-63 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-63 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-63 svg {
  color: #6088FE;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-63 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-64 {
  padding-top: 16px;
}

.emotion-69 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.emotion-71 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-72 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-73 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-74 {
  clear: both;
}

.emotion-75 {
  color: #ffffff;
  text-align: left;
}

.emotion-75 th,
.emotion-75 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-75 th:first-of-type,
.emotion-75 td:first-of-type {
  padding-left: 16px;
}

.emotion-75 th:nth-of-type(2),
.emotion-75 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-75 th:nth-of-type(3),
.emotion-75 td:nth-of-type(3) {
  width: 100%;
}

.emotion-75 th {
  color: #b3b3b3;
  font-weight: 500;
  white-space: nowrap;
}

.emotion-75 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-75 td:first-of-type {
  border: none;
}

.emotion-75 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-75 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-75 tr:hover+tr td {
  border-top-color: transparent;
}

.emotion-75 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-75 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-76 {
  cursor: pointer;
}

.emotion-77 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-82 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-83 {
  margin-right: 16px;
}

.emotion-125 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-125 button,
.emotion-125 a {
  margin-right: 16px;
}

.emotion-125 button:last,
.emotion-125 a:last {
  margin-right: 0;
}

.emotion-126 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-126,
.emotion-126:hover,
.emotion-126:visited,
.emotion-126 .noop {
  background-color: #808080;
}

.emotion-126:hover,
.emotion-126 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-126[aria-disabled=true],
.emotion-126 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-127 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-127,
.emotion-127:hover,
.emotion-127:visited,
.emotion-127 .noop {
  background-color: #3A5DFF;
}

.emotion-127:hover,
.emotion-127 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-127[aria-disabled=true],
.emotion-127 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <p
    className="emotion-1"
  >
    Additional file types or analysis modules can be added to this data source. All previous selections will remain constant and cannot be modified.
  </p>
  <h3
    className="emotion-2"
  >
    Data Source Name
  </h3>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <label
        className="emotion-5"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-6"
      >
        <input
          autoComplete="off"
          className="emotion-7"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-8"
      >
        <span
          className="emotion-9"
        >
          Name cannot be empty
        </span>
         
      </div>
    </div>
  </div>
  <h3
    className="emotion-2"
  >
    Storage Address
  </h3>
  <div
    className="emotion-11"
  >
    gs://zorroa-dev-data/images
  </div>
  <fieldset
    className="emotion-12"
  >
    <legend
      className="emotion-13"
    >
      <h3
        className="emotion-2"
      >
        Edit File Types
      </h3>
       
      <div
        className="emotion-15"
      >
        <div
          className="emotion-16"
        >
          <button
            aria-details="SupportedFile Types"
            aria-label="Supported File Types"
            className="emotion-17"
            type="button"
          >
            <svg
              data-file-name="help.svg"
              height={20}
            />
          </button>
          <div
            className="emotion-18"
            id="SupportedFile Types"
            role="tooltip"
          >
            <div
              className="emotion-19"
            />
            <div
              className="emotion-20"
            >
              <h3
                className="emotion-21"
              >
                Supported File Types
              </h3>
              <div
                className="emotion-22"
              >
                <h4>
                  Images
                  :
                </h4>
                GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
              </div>
              <div
                className="emotion-22"
              >
                <h4>
                  Documents
                  :
                </h4>
                PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
              </div>
              <div
                className="emotion-22"
              >
                <h4>
                  Videos
                  :
                </h4>
                MP4, M4V, MOV, MPG, MPEG, OGG
              </div>
            </div>
          </div>
        </div>
      </div>
    </legend>
    <div
      className="emotion-25"
    >
      <div>
        You can change the file types to import. You must select at least one file type.
      </div>
    </div>
    <div
      className="emotion-26"
    />
    <label
      className="emotion-27"
    >
      <div
        className="emotion-28"
      >
        <input
          className="emotion-29"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Images"
        />
        <div
          className="emotion-30"
        >
          <svg
            className="emotion-31"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-32"
      >
        <svg
          color="#ebb52e"
          data-file-name="images.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-33"
      >
        <span
          className="emotion-34"
        >
          Image Files
        </span>
      </div>
    </label>
    <label
      className="emotion-27"
    >
      <div
        className="emotion-28"
      >
        <input
          className="emotion-29"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Documents"
        />
        <div
          className="emotion-30"
        >
          <svg
            className="emotion-31"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-32"
      >
        <svg
          color="#00bdc1"
          data-file-name="documents.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-33"
      >
        <span
          className="emotion-34"
        >
          Documents (PDF & MS Office)
        </span>
        <span
          className="emotion-43"
        >
          Pages will be processed and counted as individual assets
        </span>
      </div>
    </label>
    <label
      className="emotion-27"
    >
      <div
        className="emotion-28"
      >
        <input
          className="emotion-46"
          defaultChecked={true}
          onClick={[Function]}
          type="checkbox"
          value="Videos"
        />
        <div
          className="emotion-30"
        >
          <svg
            className="emotion-48"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-32"
      >
        <svg
          color="#8f89e7"
          data-file-name="videos.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-33"
      >
        <span
          className="emotion-34"
        >
          Video Files
        </span>
      </div>
    </label>
  </fieldset>
  <div
    className="emotion-52"
  />
  <h3
    className="emotion-2"
  >
    Edit Analysis Modules
  </h3>
  <p
    className="emotion-54"
  >
    You can change the analysis modules to be applied to the file types selected in step 2.
  </p>
  <div
    className="emotion-55"
  >
    <details
      className="emotion-56"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="Boon AI Automatic Analysis"
        className="emotion-57"
      >
        <div
          className="emotion-58"
        >
          <svg
            className="emotion-59"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-60"
          >
            Boon AI Automatic Analysis
          </span>
        </div>
      </summary>
      <div
        className="emotion-61"
      >
        <p
          className="emotion-62"
        >
          The following basic analysis is applied to all data sets.
        </p>
        <ul
          className="emotion-63"
        >
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                File Introspection
              </span>
              <br />
              Extracts native metadata from file.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Similarity Hash
              </span>
              <br />
              Adds a hash to all images used to quantify the similarity between images.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Proxy Creation
              </span>
              <br />
              Creates proxy files suitable for web streaming for all media.
            </div>
          </li>
        </ul>
      </div>
    </details>
  </div>
  <div
    className="emotion-64"
  >
    <details
      className="emotion-56"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="zorroa"
        className="emotion-57"
      >
        <div
          className="emotion-58"
        >
          <svg
            className="emotion-59"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-69"
          >
            <img
              alt="zorroa"
              height={32}
              src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
            />
          </span>
        </div>
      </summary>
      <div
        className="emotion-61"
      >
        <p
          className="emotion-71"
        >
          These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
        </p>
        <fieldset
          className="emotion-72"
        >
          <legend
            className="emotion-73"
          >
            Visual Intelligence
          </legend>
          <div
            className="emotion-74"
          />
          <table
            className="emotion-75"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-76"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-77"
                  >
                    <div
                      className="emotion-28"
                    >
                      <input
                        className="emotion-46"
                        defaultChecked={true}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-label-detection"
                      />
                      <div
                        className="emotion-30"
                      >
                        <svg
                          className="emotion-48"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-label-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-label-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-82"
                  >
                    <svg
                      className="emotion-83"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-83"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-76"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-77"
                  >
                    <div
                      className="emotion-28"
                    >
                      <input
                        className="emotion-29"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-object-detection"
                      />
                      <div
                        className="emotion-30"
                      >
                        <svg
                          className="emotion-31"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-object-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-object-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-82"
                  >
                    <svg
                      className="emotion-83"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-83"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-76"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-77"
                  >
                    <div
                      className="emotion-28"
                    >
                      <input
                        className="emotion-29"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="boonai-label-detection"
                      />
                      <div
                        className="emotion-30"
                      >
                        <svg
                          className="emotion-31"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      boonai-label-detection
                      : 
                      Generate keyword labels for image, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  boonai-label-detection
                </td>
                <td>
                  Generate keyword labels for image, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-82"
                  >
                    <svg
                      className="emotion-83"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-83"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-76"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-77"
                  >
                    <div
                      className="emotion-28"
                    >
                      <input
                        className="emotion-29"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="boonai-object-detection"
                      />
                      <div
                        className="emotion-30"
                      >
                        <svg
                          className="emotion-31"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      boonai-object-detection
                      : 
                      Detect everyday objects in images, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  boonai-object-detection
                </td>
                <td>
                  Detect everyday objects in images, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-82"
                  >
                    <svg
                      className="emotion-83"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-83"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
        <fieldset
          className="emotion-72"
        >
          <legend
            className="emotion-73"
          >
            Zorroa Timeline Extraction
          </legend>
          <div
            className="emotion-74"
          />
          <table
            className="emotion-75"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-76"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-77"
                  >
                    <div
                      className="emotion-28"
                    >
                      <input
                        className="emotion-29"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="boonai-video-shot-clips"
                      />
                      <div
                        className="emotion-30"
                      >
                        <svg
                          className="emotion-31"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      boonai-video-shot-clips
                      : 
                      Break video files into individual assets based on a shot detection algorithm.
                    </div>
                  </label>
                </td>
                <td>
                  boonai-video-shot-clips
                </td>
                <td>
                  Break video files into individual assets based on a shot detection algorithm.
                </td>
                <td>
                  <div
                    className="emotion-82"
                  >
                    <svg
                      className="emotion-83"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-83"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
      </div>
    </details>
  </div>
  <div
    className="emotion-125"
  >
    <a
      className="emotion-126"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      aria-disabled={true}
      className="emotion-127"
      onClick={[Function]}
      type="submit"
    >
      Update Data Source
    </button>
  </div>
</form>
`;

exports[`<DataSourcesEditForm /> should render properly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
}

.emotion-1 {
  margin-top: 0;
  max-width: 600px;
  color: #b3b3b3;
}

.emotion-2 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-3 {
  width: 470px;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-6 {
  position: relative;
}

.emotion-7 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-7:focus,
.emotion-7 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-7:hover,
.emotion-7 .noop {
  border: 2px solid #ffffff;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-10 {
  font-weight: 500;
  color: #b3b3b3;
}

.emotion-11 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-12 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-15:hover div,
.emotion-15:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-15:hover button,
.emotion-15:focus-within button {
  color: #ffffff;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-17 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-17:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-18:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-19 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-20 {
  font-size: 15px;
  line-height: 19px;
  padding-bottom: 8px;
}

.emotion-21 {
  padding-bottom: 8px;
}

.emotion-24 {
  clear: both;
  padding-bottom: 16px;
  color: #b3b3b3;
}

.emotion-25 {
  clear: both;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 16px;
  padding-bottom: 16px;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-28 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-29 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-30 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
  fill: #ffffff;
}

.emotion-31 {
  padding-left: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
}

.emotion-33 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-42 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-45 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #3A5DFF;
  border: 2px solid #3A5DFF;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-47 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 1;
  fill: #ffffff;
}

.emotion-51 {
  height: 8px;
}

.emotion-53 {
  margin: 0;
  padding-top: 8px;
  color: #b3b3b3;
}

.emotion-54 {
  padding-top: 16px;
}

.emotion-55 {
  border-radius: 2px;
  background-color: #3b3b3b;
}

.emotion-55:hover summary svg {
  opacity: 1;
}

.emotion-56 {
  list-style-type: none;
  padding: 16px;
  background-color: #3b3b3b;
}

.emotion-56::-webkit-details-marker {
  display: none;
}

.emotion-56:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-58 {
  color: #808080;
}

.emotion-59 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-top: -2px;
  padding-left: 16px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-60 {
  border-top: 1px solid #4a4a4a;
  padding: 32px;
  padding-top: 16px;
}

.emotion-61 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
}

.emotion-62 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #b3b3b3;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 8px;
}

.emotion-62 li {
  width: 33%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
}

.emotion-62 svg {
  color: #6088FE;
  margin-right: 16px;
  min-width: 20px;
  max-width: 20px;
}

.emotion-62 span {
  font-weight: 700;
  color: #ffffff;
}

.emotion-63 {
  padding-top: 16px;
}

.emotion-68 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.emotion-70 {
  color: #b3b3b3;
  margin: 0;
  padding-top: 8px;
  padding-bottom: 16px;
  max-width: 600px;
}

.emotion-71 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 32px;
}

.emotion-72 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-73 {
  clear: both;
}

.emotion-74 {
  color: #ffffff;
  text-align: left;
}

.emotion-74 th,
.emotion-74 td {
  padding: 16px;
  padding-left: 0;
}

.emotion-74 th:first-of-type,
.emotion-74 td:first-of-type {
  padding-left: 16px;
}

.emotion-74 th:nth-of-type(2),
.emotion-74 td:nth-of-type(2) {
  min-width: 300px;
}

.emotion-74 th:nth-of-type(3),
.emotion-74 td:nth-of-type(3) {
  width: 100%;
}

.emotion-74 th {
  color: #b3b3b3;
  font-weight: 500;
  white-space: nowrap;
}

.emotion-74 td {
  border-top: 1px solid #4a4a4a;
  vertical-align: top;
}

.emotion-74 td:first-of-type {
  border: none;
}

.emotion-74 td:nth-of-type(2) {
  font-family: Roboto Mono;
}

.emotion-74 tr:hover td {
  background-color: #4a4a4a;
}

.emotion-74 tr:hover+tr td {
  border-top-color: transparent;
}

.emotion-74 tr:last-of-type td {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-74 tr:last-of-type td:first-of-type {
  border: none;
}

.emotion-75 {
  cursor: pointer;
}

.emotion-76 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
}

.emotion-81 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-82 {
  margin-right: 16px;
}

.emotion-124 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-124 button,
.emotion-124 a {
  margin-right: 16px;
}

.emotion-124 button:last,
.emotion-124 a:last {
  margin-right: 0;
}

.emotion-125 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-125,
.emotion-125:hover,
.emotion-125:visited,
.emotion-125 .noop {
  background-color: #808080;
}

.emotion-125:hover,
.emotion-125 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-125[aria-disabled=true],
.emotion-125 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-126 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-126,
.emotion-126:hover,
.emotion-126:visited,
.emotion-126 .noop {
  background-color: #3A5DFF;
}

.emotion-126:hover,
.emotion-126 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-126[aria-disabled=true],
.emotion-126 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
  action=""
  className="emotion-0"
  method="post"
  onSubmit={[Function]}
>
  <p
    className="emotion-1"
  >
    Additional file types or analysis modules can be added to this data source. All previous selections will remain constant and cannot be modified.
  </p>
  <h3
    className="emotion-2"
  >
    Data Source Name
  </h3>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <label
        className="emotion-5"
        htmlFor="name"
      >
        Name
      </label>
      <div
        className="emotion-6"
      >
        <input
          autoComplete="off"
          className="emotion-7"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value="test"
        />
      </div>
      <div
        className="emotion-8"
      >
         
      </div>
    </div>
  </div>
  <h3
    className="emotion-2"
  >
    Storage Address
  </h3>
  <div
    className="emotion-10"
  >
    gs://zorroa-dev-data/images
  </div>
  <fieldset
    className="emotion-11"
  >
    <legend
      className="emotion-12"
    >
      <h3
        className="emotion-2"
      >
        Edit File Types
      </h3>
       
      <div
        className="emotion-14"
      >
        <div
          className="emotion-15"
        >
          <button
            aria-details="SupportedFile Types"
            aria-label="Supported File Types"
            className="emotion-16"
            type="button"
          >
            <svg
              data-file-name="help.svg"
              height={20}
            />
          </button>
          <div
            className="emotion-17"
            id="SupportedFile Types"
            role="tooltip"
          >
            <div
              className="emotion-18"
            />
            <div
              className="emotion-19"
            >
              <h3
                className="emotion-20"
              >
                Supported File Types
              </h3>
              <div
                className="emotion-21"
              >
                <h4>
                  Images
                  :
                </h4>
                GIF, PNG, JPG, JPEG, TIF, TIFF, PSD
              </div>
              <div
                className="emotion-21"
              >
                <h4>
                  Documents
                  :
                </h4>
                PDF, DOC, DOCX, PPT, PPTX, XLS, XLSX
              </div>
              <div
                className="emotion-21"
              >
                <h4>
                  Videos
                  :
                </h4>
                MP4, M4V, MOV, MPG, MPEG, OGG
              </div>
            </div>
          </div>
        </div>
      </div>
    </legend>
    <div
      className="emotion-24"
    >
      <div>
        You can change the file types to import. You must select at least one file type.
      </div>
    </div>
    <div
      className="emotion-25"
    />
    <label
      className="emotion-26"
    >
      <div
        className="emotion-27"
      >
        <input
          className="emotion-28"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Images"
        />
        <div
          className="emotion-29"
        >
          <svg
            className="emotion-30"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-31"
      >
        <svg
          color="#ebb52e"
          data-file-name="images.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-32"
      >
        <span
          className="emotion-33"
        >
          Image Files
        </span>
      </div>
    </label>
    <label
      className="emotion-26"
    >
      <div
        className="emotion-27"
      >
        <input
          className="emotion-28"
          defaultChecked={false}
          onClick={[Function]}
          type="checkbox"
          value="Documents"
        />
        <div
          className="emotion-29"
        >
          <svg
            className="emotion-30"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-31"
      >
        <svg
          color="#00bdc1"
          data-file-name="documents.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-32"
      >
        <span
          className="emotion-33"
        >
          Documents (PDF & MS Office)
        </span>
        <span
          className="emotion-42"
        >
          Pages will be processed and counted as individual assets
        </span>
      </div>
    </label>
    <label
      className="emotion-26"
    >
      <div
        className="emotion-27"
      >
        <input
          className="emotion-45"
          defaultChecked={true}
          onClick={[Function]}
          type="checkbox"
          value="Videos"
        />
        <div
          className="emotion-29"
        >
          <svg
            className="emotion-47"
            data-file-name="checkmark.svg"
            height={20}
          />
        </div>
      </div>
      <div
        className="emotion-31"
      >
        <svg
          color="#8f89e7"
          data-file-name="videos.svg"
          height={32}
        />
      </div>
      <div
        className="emotion-32"
      >
        <span
          className="emotion-33"
        >
          Video Files
        </span>
      </div>
    </label>
  </fieldset>
  <div
    className="emotion-51"
  />
  <h3
    className="emotion-2"
  >
    Edit Analysis Modules
  </h3>
  <p
    className="emotion-53"
  >
    You can change the analysis modules to be applied to the file types selected in step 2.
  </p>
  <div
    className="emotion-54"
  >
    <details
      className="emotion-55"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="Boon AI Automatic Analysis"
        className="emotion-56"
      >
        <div
          className="emotion-57"
        >
          <svg
            className="emotion-58"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-59"
          >
            Boon AI Automatic Analysis
          </span>
        </div>
      </summary>
      <div
        className="emotion-60"
      >
        <p
          className="emotion-61"
        >
          The following basic analysis is applied to all data sets.
        </p>
        <ul
          className="emotion-62"
        >
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                File Introspection
              </span>
              <br />
              Extracts native metadata from file.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Similarity Hash
              </span>
              <br />
              Adds a hash to all images used to quantify the similarity between images.
            </div>
          </li>
          <li>
            <svg
              data-file-name="checkmark.svg"
            />
            <div>
              <span>
                Proxy Creation
              </span>
              <br />
              Creates proxy files suitable for web streaming for all media.
            </div>
          </li>
        </ul>
      </div>
    </details>
  </div>
  <div
    className="emotion-63"
  >
    <details
      className="emotion-55"
      onToggle={[Function]}
      open={true}
    >
      <summary
        aria-label="zorroa"
        className="emotion-56"
      >
        <div
          className="emotion-57"
        >
          <svg
            className="emotion-58"
            data-file-name="chevron.svg"
            height={20}
          />
          <span
            className="emotion-68"
          >
            <img
              alt="zorroa"
              height={32}
              src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDMuMyAzMCI+CiAgPHBhdGggZD0iTTExLjMgMGwxMS45IDQuNy0uOCAxLjd6bS0uMy45TDIzLjUgOGwtNy40IDEyLjctMi40LTEuNiA3LjgtOS42eiIgZmlsbD0iI2ZmZmZmZiIvPgogIDxwYXRoIGQ9Ik05LjQuOGwxMC44IDkuMS05LjcgMTEtMS44LTEuNyA5LjYtOC4zeiIgZmlsbD0iI2I4ZDY1MiIvPgogIDxwYXRoIGQ9Ik0xMy43IDkuNEwxLjEgMTEuOGwuNCAxLjd6bS0uMSAxTDAgMTQuOWw0LjcgMTMuOSAyLjgtMS4xLTUuOC0xMXoiIGZpbGw9IiNmZmZmZmYiLz4KICA8cGF0aCBkPSJNMTUuMSAxMC41TDIuOSAxNy40IDEwLjMgMzBsMi4xLTEuMy03LjktMTB6IiBmaWxsPSIjYjhkNjUyIi8+CiAgPHBhdGggZmlsbD0iI2ZmZiIgZD0iTTk5LjMgMTAuN2gtMmwtMy45IDkuOWgybDEtMi40aDMuOGwxIDIuNGgybC0zLjktOS45em0uMyA1LjhIOTdsMS4zLTMuOSAxLjMgMy45em0tMjIuMy0xLjJjLjQtLjUuNi0xIC42LTEuNyAwLTEtLjUtMS43LTEuMy0yLjMtLjYtLjMtMS41LS41LTIuNi0uNWgtNC4zdjkuOWgxLjl2LTQuMWgyLjZsMiA0LjFoMkw3NiAxNi4yYy41LS4yLjktLjUgMS4zLS45ek03NiAxMy42YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOUg3NGMuNiAwIDEgLjEgMS40LjIuNC40LjYuNy42IDEuMnptLTExIDEuN2MuNC0uNS42LTEgLjYtMS43IDAtMS0uNS0xLjctMS4zLTIuMy0uNi0uNC0xLjUtLjYtMi42LS42aC00LjN2OS45aDEuOXYtNC4xSDYybDIgNC4xaDJsLTIuMi00LjRjLjUtLjIuOS0uNSAxLjItLjl6bS0xLjMtMS43YzAgLjUtLjEuOC0uNSAxLS4yLjEtLjUuMy0uNy40LS4zLjEtLjYuMS0xIC4xaC0yLjN2LTIuOWgyLjVjLjYgMCAxIC4xIDEuNC4yLjUuNC42LjcuNiAxLjJ6bS0yMy0xLjd2LTEuMmgtNy44djEuNWg1LjRsLTUuNiA3djEuNGg4LjF2LTEuNUgzNXptMTAuMi0xYy00LTEuNC03LjkgMi41LTYuNSA2LjUuNSAxLjUgMS43IDIuNiAzLjEgMy4xIDQgMS40IDcuOS0yLjUgNi41LTYuNS0uNS0xLjQtMS43LTIuNi0zLjEtMy4xem0xLjYgNGMuNiAyLjQtMS42IDQuNy00LjEgNC4xLTEuMi0uMy0yLjEtMS4yLTIuNC0yLjQtLjYtMi40IDEuNi00LjcgNC4xLTQuMSAxLjEuMyAyIDEuMiAyLjQgMi40em0zNS40LTRjLTQtMS40LTcuOSAyLjUtNi41IDYuNS41IDEuNSAxLjcgMi42IDMuMSAzLjEgNCAxLjQgNy45LTIuNSA2LjUtNi41LS41LTEuNC0xLjctMi42LTMuMS0zLjF6bTEuNSA0Yy42IDIuNC0xLjYgNC43LTQuMSA0LjEtMS4yLS4zLTIuMS0xLjItMi40LTIuNC0uNi0yLjQgMS42LTQuNyA0LjEtNC4xIDEuMS4zIDIuMSAxLjIgMi40IDIuNHoiLz4KPC9zdmc+Cg=="
            />
          </span>
        </div>
      </summary>
      <div
        className="emotion-60"
      >
        <p
          className="emotion-70"
        >
          These analysis modules are included in your base package. You can run as many as you’d like, but running more than you need will increase processing time.
        </p>
        <fieldset
          className="emotion-71"
        >
          <legend
            className="emotion-72"
          >
            Visual Intelligence
          </legend>
          <div
            className="emotion-73"
          />
          <table
            className="emotion-74"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-75"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-76"
                  >
                    <div
                      className="emotion-27"
                    >
                      <input
                        className="emotion-45"
                        defaultChecked={true}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-label-detection"
                      />
                      <div
                        className="emotion-29"
                      >
                        <svg
                          className="emotion-47"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-label-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-label-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-81"
                  >
                    <svg
                      className="emotion-82"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-82"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-75"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-76"
                  >
                    <div
                      className="emotion-27"
                    >
                      <input
                        className="emotion-28"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="gcp-object-detection"
                      />
                      <div
                        className="emotion-29"
                      >
                        <svg
                          className="emotion-30"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      gcp-object-detection
                      : 
                      Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                    </div>
                  </label>
                </td>
                <td>
                  gcp-object-detection
                </td>
                <td>
                  Utilize Google Cloud Vision label detection to detect and extract information about entities in an image, across a broad group of categories.
                </td>
                <td>
                  <div
                    className="emotion-81"
                  >
                    <svg
                      className="emotion-82"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-82"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-75"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-76"
                  >
                    <div
                      className="emotion-27"
                    >
                      <input
                        className="emotion-28"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="boonai-label-detection"
                      />
                      <div
                        className="emotion-29"
                      >
                        <svg
                          className="emotion-30"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      boonai-label-detection
                      : 
                      Generate keyword labels for image, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  boonai-label-detection
                </td>
                <td>
                  Generate keyword labels for image, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-81"
                  >
                    <svg
                      className="emotion-82"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-82"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
              <tr
                className="emotion-75"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-76"
                  >
                    <div
                      className="emotion-27"
                    >
                      <input
                        className="emotion-28"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="boonai-object-detection"
                      />
                      <div
                        className="emotion-29"
                      >
                        <svg
                          className="emotion-30"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      boonai-object-detection
                      : 
                      Detect everyday objects in images, video, and documents.
                    </div>
                  </label>
                </td>
                <td>
                  boonai-object-detection
                </td>
                <td>
                  Detect everyday objects in images, video, and documents.
                </td>
                <td>
                  <div
                    className="emotion-81"
                  >
                    <svg
                      className="emotion-82"
                      color="#ebb52e"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-82"
                      color="#00bdc1"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
        <fieldset
          className="emotion-71"
        >
          <legend
            className="emotion-72"
          >
            Zorroa Timeline Extraction
          </legend>
          <div
            className="emotion-73"
          />
          <table
            className="emotion-74"
          >
            <thead>
              <tr>
                <th>
                   
                </th>
                <th>
                  Module Name
                </th>
                <th>
                  Description
                </th>
                <th>
                  File Types
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-75"
                onClick={[Function]}
              >
                <td>
                  <label
                    className="emotion-76"
                  >
                    <div
                      className="emotion-27"
                    >
                      <input
                        className="emotion-28"
                        defaultChecked={false}
                        onClick={[Function]}
                        type="checkbox"
                        value="boonai-video-shot-clips"
                      />
                      <div
                        className="emotion-29"
                      >
                        <svg
                          className="emotion-30"
                          data-file-name="checkmark.svg"
                          height={20}
                        />
                      </div>
                    </div>
                    <div
                      className="hidden"
                    >
                      boonai-video-shot-clips
                      : 
                      Break video files into individual assets based on a shot detection algorithm.
                    </div>
                  </label>
                </td>
                <td>
                  boonai-video-shot-clips
                </td>
                <td>
                  Break video files into individual assets based on a shot detection algorithm.
                </td>
                <td>
                  <div
                    className="emotion-81"
                  >
                    <svg
                      className="emotion-82"
                      color="transparent"
                      data-file-name="images.svg"
                      height={24}
                    />
                    <svg
                      className="emotion-82"
                      color="transparent"
                      data-file-name="documents.svg"
                      height={24}
                    />
                    <svg
                      color="#8f89e7"
                      data-file-name="videos.svg"
                      height={24}
                    />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </fieldset>
      </div>
    </details>
  </div>
  <div
    className="emotion-124"
  >
    <a
      className="emotion-125"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Cancel
    </a>
    <button
      className="emotion-126"
      onClick={[Function]}
      type="submit"
    >
      Update Data Source
    </button>
  </div>
</form>
`;
